force-app/main/default/objects/Contact/fields/Back_Squat__c.field-meta.xml
<CustomField>
    <fullName>Back_Squat__c</fullName>
    <label>Back Squat</label>

    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>