force-app/main/default/objects/Contact/fields/Bench_Press__c.field-meta.xml
<CustomField>
    <fullName>Bench_Press__c</fullName>
    <label>Bench Press</label>

    <precision>6</precision>
    <scale>2</scale>

    <type>Number</type>
</CustomField>