force-app/main/default/objects/Contact/fields/BMI__c.field-meta.xml
<CustomField>
    <fullName>BMI__c</fullName>
    <label>BMI</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>