force-app/main/default/objects/Contact/fields/Deadlift__c.field-meta.xml
<CustomField>
    <fullName>Deadlift__c</fullName>
    <label>Deadlift</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>