force-app/main/default/objects/Contact/fields/Fitness_Level__c.field-meta.xml
<CustomField>
    <fullName>Fitness_Level__c</fullName>
    <label>Fitness Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>