force-app/main/default/objects/Contact/fields/Issues__c.field-meta.xml
<CustomField>
    <fullName>Issues__c</fullName>
    <label>Issues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Knee</fullName>
            </value>
            <value>
                <fullName>Shoulder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>