force-app/main/default/objects/Contact/fields/Level_of_Education__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Education__c</fullName>
    <label>Level of Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Masters</fullName>
            </value>
            <value>
                <fullName>Bachelors</fullName>
            </value>
            <value>
                <fullName>High-School</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>