force-app/main/default/objects/Contact/fields/Number_of_Clients__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Clients__c</fullName>
    <label>Number of Clients</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>