force-app/main/default/objects/Contact/fields/Training_Class__c.field-meta.xml
<CustomField>
    <fullName>Training_Class__c</fullName>
    <label>Training Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
                <default>true</default>
                <label>Basic</label>
            </value>
            <value>
                <fullName>Bodybuilding</fullName>
            </value>
            <value>
                <fullName>Cross-Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>