force-app/main/default/objects/Contact/recordTypes/Account_Ambassador.recordType-meta.xml
<RecordType>
    <fullName>Account_Ambassador</fullName>
    <active>true</active>
    <description>For Account representatives</description>
    <label>Account Ambassador</label>
</RecordType>