force-app/main/default/objects/Contact/recordTypes/Gym_Member.recordType-meta.xml
<RecordType>
    <fullName>Gym_Member</fullName>
    <active>true</active>
    <description>For members of the gym</description>
    <label>Gym Member</label>
</RecordType>