force-app/main/default/objects/Contact/recordTypes/Gym_Staff.recordType-meta.xml
<RecordType>
    <fullName>Gym_Staff</fullName>
    <active>true</active>
    <description>For all other employees of the gym</description>
    <label>Gym Staff</label>
</RecordType>