force-app/main/default/objects/Contact/recordTypes/Gym_Trainer.recordType-meta.xml
<RecordType>
    <fullName>Gym_Trainer</fullName>
    <active>true</active>
    <description>For trainers working in the gym</description>
    <label>Gym Trainer</label>
</RecordType>