force-app/main/default/objects/Contact/listViews/GymMembers.listView-meta.xml
<ListView>
    <fullName>GymMembers</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>GymMembers</label>
</ListView>